# RAGnarok

./: .gitignore  code_dump.py  compose.yml
backend/: .dockerignore  Dockerfile  celeryconfig.py  compose.dev.yml  compose.yml  init-pgvector.sql  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/auth/: hash.py  jwt.py  routes.py  schemas.py
backend/app/db/: models.py  session.py
backend/app/rag/: embeddings.py  llm.py  processor.py  routes.py  schemas.py  vector_store.py
backend/apps/: config.py  main.py
backend/apps/auth/: hash.py  jwt.py  routes.py  schemas.py
backend/apps/db/: models.py  redis_client.py  session.py
backend/apps/middleware/: rate_limiter.py
backend/apps/rag/: cached_embeddings.py  embeddings.py  llm.py  processor.py  routes.py  schemas.py  vector_store.py
backend/apps/services/: embedding_service.py
backend/nginx/: nginx.conf
frontend/: Dockerfile  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/dashboard/: ChatInput.tsx  ChatInterface.tsx  DocumentAttachmentBar.tsx  DocumentChip.tsx  Header.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: api.ts
